docs/tests/syntax/bad/testfile-for2-1.cpp
void m() { int i; for( , i=0; true; i++) ; }
